# aiffer

./: .gitignore  CLAUDE.md  Makefile  PROJECT_CONTEXT.md  bun.lockb  index.html  package.json  setup.sh  tasks.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
PROGRESS/: 001-scaffold-tauri-svelte.md  002-app-shell-layout.md  003-rust-git-diff-reading.md  004-tauri-diff-commands.md  005-file-tree-sidebar.md  006-diff-viewer-basic.md  007-diff-viewer-enhancements.md  008-comment-data-model.md  009-inline-comment-form.md  010-comment-thread-display.md  011-review-summary-panel.md  012-comment-serialization.md  013-ai-agent-integration.md  014-ai-response-panel.md  015-settings-panel.md  016-diff-type-toggle.md  017-keyboard-shortcuts.md  018-syntax-highlighting.md  019-dark-light-theme.md  020-open-folder-integration.md  021-error-handling-polish.md  022-e2e-smoke-test.md
scripts/: generate-homebrew-cask.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/tests/: smoke_test.rs
src/lib/components/: AiPanel.svelte  CommentForm.svelte  CommentThread.svelte  DiffContent.svelte  DiffFileSection.svelte  DiffHunk.svelte  DiffLine.svelte  ErrorBoundary.svelte  Header.svelte  KeyboardShortcutHelp.svelte  ReviewSummary.svelte  Settings.svelte  Sidebar.svelte  ToastContainer.svelte
src/lib/types/: diff.ts  (+1 more)
(+5 files in other folders)
