[package]
name = "aiffer"
version = "0.1.0"
description = "AI-Powered Diff Reviewer"
authors = ["shonenada"]
edition = "2021"

[lib]
name = "aiffer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
